[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Themes/panel.tres" type="Theme" id=1]
[ext_resource path="res://UI/Settings.gd" type="Script" id=2]
[ext_resource path="res://UI/Themes/labels.tres" type="Theme" id=3]
[ext_resource path="res://UI/Themes/buttons.tres" type="Theme" id=4]
[ext_resource path="res://UI/Themes/title_text.tres" type="Theme" id=5]

[node name="Settings" type="Popup" groups=["UI"]]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -172.0
margin_top = -94.0
margin_right = 172.0
margin_bottom = 94.0

[node name="VSplitContainer" type="VSplitContainer" parent="Panel/MarginContainer"]
margin_right = 344.0
margin_bottom = 188.0

[node name="Label" type="Label" parent="Panel/MarginContainer/VSplitContainer"]
margin_right = 344.0
margin_bottom = 28.0
theme = ExtResource( 5 )
text = "Settings"
align = 1

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer/VSplitContainer"]
margin_top = 40.0
margin_right = 344.0
margin_bottom = 188.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusLabel" type="Label" parent="Panel/MarginContainer/VSplitContainer/GridContainer"]
margin_right = 240.0
margin_bottom = 20.0
theme = ExtResource( 3 )
text = "Music Volume"

[node name="MusSlider" type="HSlider" parent="Panel/MarginContainer/VSplitContainer/GridContainer"]
margin_left = 244.0
margin_right = 344.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
min_value = -10.0
max_value = 0.0
value = -3.0

[node name="MuteMusLabel" type="Label" parent="Panel/MarginContainer/VSplitContainer/GridContainer"]
margin_top = 26.0
margin_right = 240.0
margin_bottom = 46.0
theme = ExtResource( 3 )
text = "Mute Music"

[node name="MuteMusButton" type="CheckBox" parent="Panel/MarginContainer/VSplitContainer/GridContainer"]
margin_left = 244.0
margin_top = 24.0
margin_right = 344.0
margin_bottom = 48.0

[node name="SFXLabel" type="Label" parent="Panel/MarginContainer/VSplitContainer/GridContainer"]
margin_top = 52.0
margin_right = 240.0
margin_bottom = 72.0
theme = ExtResource( 3 )
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="Panel/MarginContainer/VSplitContainer/GridContainer"]
margin_left = 244.0
margin_top = 52.0
margin_right = 344.0
margin_bottom = 68.0
min_value = -10.0
max_value = 0.0
value = -3.0

[node name="MuteSFXLabel" type="Label" parent="Panel/MarginContainer/VSplitContainer/GridContainer"]
margin_top = 78.0
margin_right = 240.0
margin_bottom = 98.0
theme = ExtResource( 3 )
text = "Mute SFX"

[node name="MuteSFXButton" type="CheckBox" parent="Panel/MarginContainer/VSplitContainer/GridContainer"]
margin_left = 244.0
margin_top = 76.0
margin_right = 344.0
margin_bottom = 100.0

[node name="FSLabel" type="Label" parent="Panel/MarginContainer/VSplitContainer/GridContainer"]
margin_top = 106.0
margin_right = 240.0
margin_bottom = 126.0
theme = ExtResource( 3 )
text = "Fullscreen"

[node name="FSBox" type="CheckBox" parent="Panel/MarginContainer/VSplitContainer/GridContainer"]
margin_left = 244.0
margin_top = 104.0
margin_right = 344.0
margin_bottom = 128.0

[node name="OKButton" type="Button" parent="Panel/MarginContainer/VSplitContainer/GridContainer"]
margin_top = 132.0
margin_right = 240.0
margin_bottom = 148.0
theme = ExtResource( 4 )
text = "Done"

[node name="QuitButton" type="Button" parent="Panel/MarginContainer/VSplitContainer/GridContainer"]
margin_left = 244.0
margin_top = 132.0
margin_right = 344.0
margin_bottom = 148.0
theme = ExtResource( 4 )
text = "Quit"

[connection signal="value_changed" from="Panel/MarginContainer/VSplitContainer/GridContainer/MusSlider" to="." method="_on_MusSlider_value_changed"]
[connection signal="toggled" from="Panel/MarginContainer/VSplitContainer/GridContainer/MuteMusButton" to="." method="_on_MuteMusButton_toggled"]
[connection signal="value_changed" from="Panel/MarginContainer/VSplitContainer/GridContainer/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="toggled" from="Panel/MarginContainer/VSplitContainer/GridContainer/MuteSFXButton" to="." method="_on_MuteSFXButton_toggled"]
[connection signal="toggled" from="Panel/MarginContainer/VSplitContainer/GridContainer/FSBox" to="." method="_on_FSBox_toggled"]
[connection signal="pressed" from="Panel/MarginContainer/VSplitContainer/GridContainer/OKButton" to="." method="_on_OKButton_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VSplitContainer/GridContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
